# beginner_tutorials

./: CMakeLists.txt  README.md  compile_commands.json  package.xml
.clangd/index/: basic_test.cpp.44E729897AA3373B.idx  modify_string_server.cpp.DF6CE6BF629A05F7.idx  publisher_member_function.cpp.AD316D6DE15FD84C.idx  simple_bag_recorder.cpp.4EEA696029B61CF0.idx  subscriber_member_function.cpp.D8C923EC4E08ACD9.idx
bag_recordings/my_bag/: metadata.yaml  my_bag_0.db3
launch/: system_bag_launch.py  system_launch.py  sytem_launch.yaml
launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/log/: latest_build
launch/my_bag/: metadata.yaml  my_bag_0.db3
results/: cppcheck_process.txt  cppcheck_result.txt  cpplint_result.txt  frames_2022-11-30_14.25.31.gv
src/: modify_string_client.cpp  modify_string_server.cpp  publisher_member_function.cpp  simple_bag_recorder.cpp  subscriber_member_function.cpp
test/: basic_test.cpp  test_services_client.cpp  test_services_server.cpp  test_two_executables.py.in
